# todos-rs

./: .gitignore  Cargo.toml  README.md
config/: .gitignore  default.toml
migrations/2021-11-05-060010_create_todos/: up.sql
src/: lib.rs  schema.rs  todos.rs
src/config/: app_env.rs  database.rs  mod.rs  server.rs
src/inmem_store/: mod.rs  todos.rs
src/postgres/: mod.rs  todos.rs
src/postgres_store/: mod.rs  todos.rs
src/settings/: mod.rs  server.rs
