[package]
name = "todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "todos-rest"
path = "src/bin/rest.rs"

[dependencies]
config = "0.11.0"
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
